--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
+    "prepare": "husky install",
     "build:node": "bun build --outfile=dist/index.js --target=node --minify ./src/index.ts && cp worker/worker.js dist/worker.js",
     "build:bun": "bun build --outfile=dist/index.js --target=bun --minify ./src/index.ts && cp worker/worker.js dist/worker.js",
     "build": "bun run build:node",
@@ -36,7 +37,9 @@
     "prettier": "3.2.4",
     "vitest": "3.1.2",
     "@types/express": "^5.0.1",
-    "@types/swagger-ui-express": "^4.1.8"
+    "@types/swagger-ui-express": "^4.1.8",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.3.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -45,5 +48,11 @@
     "sdk",
     "packages/tools/packages/*"
   ],
-  "packageManager": "bun@1.2.2"
+  "packageManager": "bun@1.2.2",
+  "lint-staged": {
+    "./**/**/*.{ts}": [
+      "npm run lint",
+      "npm run prettier"
+    ]
+  }
 }
