--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "type": "module",
   "scripts": {
     "prepare": "husky install",
-    "build:node": "bun build --outfile=dist/index.js --target=node --minify ./src/index.ts && cp worker/worker.js dist/worker.js",
-    "build:bun": "bun build --outfile=dist/index.js --target=bun --minify ./src/index.ts && cp worker/worker.js dist/worker.js",
-    "build": "bun run build:node",
+    "build-main": "bun build --outfile=dist/index.js --target=node --minify ./src/index.ts && cp ./src/worker/worker.js dist/worker.js",
+    "build": "bun ./scripts/build.ts",
     "start": "bun ./dist/index.js -p",
     "dev": "bun run --watch src/index.ts -p",
     "test": "vitest",
     "lint": "bun eslint --fix",
     "prettier": "prettier --write \"./**/*.{ts,js,json}\"",
-    "new:tool": "bun --cwd=./packages/tool run new"
+    "new:tool": "bun ./scripts/newTool/index.ts"
   },
   "dependencies": {
     "@ts-rest/core": "^3.52.1",
@@ -46,7 +45,7 @@
   },
   "workspaces": [
     "sdk",
-    "packages/tools/packages/*"
+    "packages/tool/packages/*"
   ],
   "packageManager": "bun@1.2.2",
   "lint-staged": {
