--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "types": ["vite/client"], // 确保包含 Vite 的类型定义
+    "types": ["vite/client", "bun"], // 确保包含 Vite 和 Bun 的类型定义
 
     // Enable latest features
     "lib": ["ESNext", "DOM"],
