feat: auto build worker

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "prepare": "husky install",
     "build": "bun ./scripts/build.ts",
     "build:main": "bun build --env=disable --outfile=dist/index.js --target=node --minify ./src/index.ts",
-    "build:worker": "bun build --outfile=dist/worker.js --target=node --minify ./src/worker/worker.ts",
+    "build:worker": "bun build --env=disable --outfile=dist/worker.js --target=node --minify ./src/worker/worker.ts",
     "start": "NODE_ENV=production node --env-file-if-exists=.env.local dist/index.js",
-    "dev": "bun run ./scripts/dev.ts && bun run --watch src/index.ts",
+    "dev": "bun run ./scripts/dev.ts",
     "test": "vitest",
     "lint": "bun eslint --fix",
     "prettier": "prettier --write \"./**/*.{ts,js,json}\"",
