--- a/.github/workflows/build-image-preview.yml
+++ b/.github/workflows/build-image-preview.yml
@@ -33,13 +33,14 @@ jobs:
         with:
           context: .
           platforms: linux/amd64
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/fastgpt-plugin-pr:${{ github.sha }}
+            ${{ secrets.ALI_IMAGE_NAME }}/fastgpt-plugin-pr:${{ github.sha }}
+            ${{ secrets.DOCKER_IMAGE_NAME }}/fastgpt-plugin-pr:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/fastgpt-plugin-pr:${{ github.ref_name }}
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.description=https://github.com/${{ github.repository }} image
-            outputs: |
-              type=image,
-              name=ghcr.io/${{ github.repository_owner }}/fastgpt-plugin-pr:${{ github.sha }},
-              push-by-digest=true,
-              push=true
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
