--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -52,21 +52,19 @@ jobs:
         with:
           context: .
           platforms: linux/${{ matrix.archs.arch }}
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/fastgpt-plugin:${{ github.ref_name }}
+            ${{ secrets.ALI_IMAGE_NAME }}/fastgpt-plugin:${{ github.ref_name }}
+            ${{ secrets.DOCKER_IMAGE_NAME }}/fastgpt-plugin:${{ github.ref_name }}
+            ghcr.io/${{ github.repository_owner }}/fastgpt-plugin:latest
+            ${{ secrets.ALI_IMAGE_NAME }}/fastgpt-plugin:latest
+            ${{ secrets.DOCKER_IMAGE_NAME }}/fastgpt-plugin:latest
+            ghcr.io/${{ github.repository_owner }}/fastgpt-plugin:${{ github.sha }}
+            ${{ secrets.ALI_IMAGE_NAME }}/fastgpt-plugin:${{ github.sha }}
+            ${{ secrets.DOCKER_IMAGE_NAME }}/fastgpt-plugin:${{ github.sha }}
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.description=https://github.com/${{ github.repository }} image
-            outputs: |
-              type=image,
-              name=ghcr.io/${{ github.repository_owner }}/fastgpt-plugin:${{ github.ref_name }},
-              ${{ secrets.ALI_IMAGE_NAME }}/fastgpt-plugin:${{ github.ref_name }},
-              ${{ secrets.DOCKER_IMAGE_NAME }}/fastgpt-plugin:${{ github.ref_name }},
-              ghcr.io/${{ github.repository_owner }}/fastgpt-plugin:latest,
-              ${{ secrets.ALI_IMAGE_NAME }}/fastgpt-plugin:latest,
-              ${{ secrets.DOCKER_IMAGE_NAME }}/fastgpt-plugin:latest,
-              ghcr.io/${{ github.repository_owner }}/fastgpt-plugin:${{ github.sha }},
-              ${{ secrets.ALI_IMAGE_NAME }}/fastgpt-plugin:${{ github.sha }},
-              ${{ secrets.DOCKER_IMAGE_NAME }}/fastgpt-plugin:${{ github.sha }}
-              push-by-digest=true,
-              push=true
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
