fix: openapi swagger

--- a/package.json
+++ b/package.json
@@ -33,17 +33,17 @@
     "@eslint/js": "^9.24.0",
     "@eslint/json": "^0.11.0",
     "@types/bun": "latest",
+    "@types/express": "^5.0.1",
+    "@types/swagger-ui-express": "^4.1.8",
     "@vitest/coverage-v8": "3.1.2",
     "bun-plugin-dts": "^0.3.0",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
-    "typescript-eslint": "^8.29.1",
-    "prettier": "3.2.4",
-    "vitest": "3.1.2",
-    "@types/express": "^5.0.1",
-    "@types/swagger-ui-express": "^4.1.8",
     "husky": "^8.0.3",
-    "lint-staged": "^13.3.0"
+    "lint-staged": "^13.3.0",
+    "prettier": "3.2.4",
+    "typescript-eslint": "^8.29.1",
+    "vitest": "3.1.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
