--- a/.github/workflows/build-image-preview.yml
+++ b/.github/workflows/build-image-preview.yml
@@ -2,12 +2,14 @@ name: Preview build image
 
 on:
   workflow_dispatch:
-  pull_request:
+  pull_request_target:
     branches: [main]
 
 permissions:
   contents: read
   packages: write
+  attestations: write
+  id-token: write
 
 jobs:
   build:
