--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -124,3 +124,23 @@ jobs:
               $(printf 'ghcr.io/${{ github.repository_owner }}/fastgpt-plugin@sha256:%s ' *)
             sleep 2
           done
+      - name: print the image label
+        id: print-image-label
+        uses: '@finleyge/github-tools'
+        if: success()
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tool: issue-comment
+          title: Image Label
+          body: |
+            ```
+            ${{ GITHUB_TAG }}
+            ${{ GITHUB_LATEST }}
+            ${{ GITHUB_SHA }}
+            ${{ ALI_TAG }}
+            ${{ ALI_LATEST }}
+            ${{ ALI_SHA }}
+            ${{ DOCKER_TAG }}
+            ${{ DOCKER_LATEST }}
+            ${{ DOCKER_SHA }}
+            ```
