--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -10,7 +10,7 @@ permissions:
   packages: write
 
 jobs:
-  build:
+  build-image:
     strategy:
       matrix:
         archs:
@@ -61,7 +61,7 @@ jobs:
           if-no-files-found: error
           retention-days: 1
 
-  merge:
+  merge-image:
     runs-on: ubuntu-latest
     needs:
       - build
