--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -64,7 +64,7 @@ jobs:
   merge-image:
     runs-on: ubuntu-latest
     needs:
-      - build
+      - build-image
     steps:
       - name: Download digests
         uses: actions/download-artifact@v4
