--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,9 @@
 PORT=3000
 AUTH_TOKEN=xxx
 
+# 日志等级: debug,info,warn,error
+LOG_LEVEL=info
+
 # MinIO 文件存储配置
 MINIO_ENDPOINT=localhost
 MINIO_PORT=9000
