--- a/.env.template
+++ b/.env.template
@@ -5,7 +5,9 @@ AUTH_TOKEN=xxx
 LOG_LEVEL=info
 
 # MinIO 文件存储配置
-MINIO_ENDPOINT=localhost
+# 自定义 s3 地址，例如 https://test.com, 会获取到文件链接: https://test.com/{{filename}}
+CUSTOM_CUSTOM_ENDPOINT=
+MINIO_HOST=localhost
 MINIO_PORT=9000
 MINIO_USE_SSL=false
 MINIO_ACCESS_KEY=minioadmin
