--- a/.github/workflows/build-image-preview.yml
+++ b/.github/workflows/build-image-preview.yml
@@ -25,13 +25,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Login to Aliyun Container Registry
         uses: docker/login-action@v3
         with:
@@ -47,7 +40,7 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ${{ secrets.ALI_IMAGE_NAME }}/fastgpt-plugin:${{ github.event.pull_request.head.sha }}
+            ${{ secrets.ALI_IMAGE_NAME }}/fastgpt-plugin-pr:${{ github.event.pull_request.head.sha }}
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.description=https://github.com/${{ github.repository }} image
@@ -66,5 +59,5 @@ jobs:
             Preview Images for this PR are:
 
             ```
-            ${{ secrets.ALI_IMAGE_NAME }}/fastgpt-plugin:${{ github.event.pull_request.head.sha }}
+            ${{ secrets.ALI_IMAGE_NAME }}/fastgpt-plugin-pr:${{ github.event.pull_request.head.sha }}
             ```
