--- a/.env.template
+++ b/.env.template
@@ -7,7 +7,7 @@ LOG_LEVEL=info
 # MinIO 文件存储配置
 # 自定义 s3 地址，例如 https://test.com, 会获取到文件链接: https://test.com/{{filename}}
 CUSTOM_CUSTOM_ENDPOINT=
-MINIO_HOST=localhost
+MINIO_ENDPOINT=localhost
 MINIO_PORT=9000
 MINIO_USE_SSL=false
 MINIO_ACCESS_KEY=minioadmin
