fix(typo): custom endpoint variable name

--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,12 @@
 PORT=3000
 AUTH_TOKEN=xxx
 
-# 日志等级: debug,info,warn,error
+# Log level: debug,info,warn,error
 LOG_LEVEL=info
 
-# MinIO 文件存储配置
-# 自定义 s3 地址，例如 https://test.com, 会获取到文件链接: https://test.com/{{filename}}
-CUSTOM_CUSTOM_ENDPOINT=
+# MinIO Config
+# Customize MinIO Endpoint. Such as https://example.com The URL returned will be rewrite by this Endpoint: https://example.com/{{filename}}
+MINIO_CUSTOM_ENDPOINT=
 MINIO_ENDPOINT=localhost
 MINIO_PORT=9000
 MINIO_USE_SSL=false
