--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prepare": "husky install",
     "build": "tsc && bun ./scripts/build.ts",
+    "build:no-tsc": "bun ./scripts/build.ts",
     "build:main": "bun build --env=disable --outfile=dist/index.js --target=node --minify ./src/index.ts",
     "build:worker": "bun build --env=disable --outfile=dist/worker.js --target=node --minify ./src/worker/worker.ts",
     "start": "NODE_ENV=production node --env-file-if-exists=.env.local dist/index.js",
@@ -32,8 +33,10 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.24.0",
     "@eslint/json": "^0.11.0",
+    "@types/babel__core": "^7.20.5",
     "@types/bun": "latest",
     "@types/express": "^5.0.1",
     "@vitest/coverage-v8": "3.1.2",
