--- a/modules/tool/packages/officeGenerate/package.json
+++ b/modules/tool/packages/officeGenerate/package.json
@@ -8,11 +8,10 @@
     "build": "bun build index.ts --minify --outdir dist --outFile index.js --target=node"
   },
   "dependencies": {
-    "markdown-it": "^14.0.0",
-    "minio": "^7.1.3",
     "zod": "^3.22.4",
     "docx": "^8.5.0",
-    "xlsx": "^0.18.5"
+    "exceljs": "^4.4.0",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
