--- a/modules/tool/packages/officeGenerate/package.json
+++ b/modules/tool/packages/officeGenerate/package.json
@@ -11,7 +11,8 @@
     "zod": "^3.22.4",
     "docx": "^8.5.0",
     "exceljs": "^4.4.0",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "markdown-it": "^13.0.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
