feat: 修正工具图标配置路径格式
- 修正 xiaoyibao 工具图标路径为 /imgs/tools/xiaoyibao.svg
- 修正 clinicalTrials 工具图标路径为 /imgs/tools/clinicalTrials.svg
- 确认 knows 工具图标路径配置正确
- 更新开发日志记录图标配置修正过程
- 构建并复制图标文件到 public/imgs/tools/ 目录

修复了之前使用 plugins/ 格式导致图标无法显示的问题，
现在使用正确的 /imgs/tools/ 路径格式符合 FastGPT 规范。

--- a/modules/tool/packages/clinicalTrials/package.json
+++ b/modules/tool/packages/clinicalTrials/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.1",
   "module": "index.ts",
   "type": "module",
+  "author": "xiaoyibao team",
   "scripts": {
     "build": "bun ../../../../scripts/build.ts"
   },
