update .env.template for MongoDB configuration and refactor S3 file handling

--- a/.env.template
+++ b/.env.template
@@ -13,3 +13,7 @@ MINIO_USE_SSL=false
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 MINIO_BUCKET=files
+
+# MongoDB connection string
+# Replace 'myusername' and 'mypassword' with your actual MongoDB credentials
+MONGODB_URI=
