update .env.template for MongoDB configuration and refactor S3 file handling

--- a/.env.template
+++ b/.env.template
@@ -17,3 +17,6 @@ MINIO_BUCKET=files
 # Signoz
 SIGNOZ_BASE_URL=
 SIGNOZ_SERVICE_NAME=fastgpt-plugin
+# MongoDB connection string
+# Replace 'myusername' and 'mypassword' with your actual MongoDB credentials
+MONGODB_URI=
