--- a/.env.template
+++ b/.env.template
@@ -16,4 +16,5 @@ MINIO_BUCKET=files
 
 # MongoDB connection string
 # Replace 'myusername' and 'mypassword' with your actual MongoDB credentials
-MONGODB_URI=
+MONGODB_URI=mongodb://myusername:mypassword@localhost:27017/fastgpt?authSource=admin&directConnection=true
+MONGO_DATABASE_NAME=fastgpt
