--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@ts-rest/core": "^3.52.1",
     "@ts-rest/express": "^3.52.1",
     "@ts-rest/open-api": "^3.52.1",
+    "@types/mongoose": "^5.11.97",
     "chalk": "^5.4.1",
     "comlink": "^4.4.2",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "json5": "^2.2.3",
     "minio": "^8.0.5",
+    "mongoose": "^8.16.4",
     "nanoid": "^5.1.5",
     "uuid": "^11.1.0",
     "zod": "^3.24.3"
