feat: implement upload and delete functionality for tools with MongoDB integration

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^5.1.0",
     "json5": "^2.2.3",
     "minio": "^8.0.5",
+    "mongoose": "^8.16.4",
     "nanoid": "^5.1.5",
     "uuid": "^11.1.0",
     "zod": "^3.24.3"
