refactor: update S3 configuration and improve tool API error handling

--- a/.env.template
+++ b/.env.template
@@ -4,15 +4,15 @@ AUTH_TOKEN=xxx
 # Log level: debug,info,warn,error
 LOG_LEVEL=info
 
-# MinIO Config
-# Customize MinIO Endpoint. Such as https://example.com The URL returned will be rewrite by this Endpoint: https://example.com/{{filename}}
-MINIO_CUSTOM_ENDPOINT=
-MINIO_ENDPOINT=localhost
-MINIO_PORT=9000
-MINIO_USE_SSL=false
-MINIO_ACCESS_KEY=minioadmin
-MINIO_SECRET_KEY=minioadmin
-MINIO_BUCKET=files
+# S3 Config
+# Customize S3 Endpoint. Such as https://example.com The URL returned will be rewrite by this Endpoint: https://example.com/{{filename}}
+S3_CUSTOM_ENDPOINT=
+S3_ENDPOINT=localhost
+S3_PORT=9000
+S3_USE_SSL=false
+S3_ACCESS_KEY=minioadmin
+S3_SECRET_KEY=minioadmin
+S3_BUCKET=files
 
 # Signoz
 SIGNOZ_BASE_URL=
