implement upload and delete API for tools (#126)
* implement upload and delete API for tools

* update .env.template for MongoDB configuration and refactor S3 file handling

* refactor: simplify plugin model and schema

* feat: implement upload and delete functionality for tools with MongoDB integration

* refactor: update S3 configuration and improve tool API error handling

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "https-proxy-agent": "^7.0.6",
     "json5": "^2.2.3",
     "minio": "^8.0.5",
+    "mongoose": "^8.16.4",
     "nanoid": "^5.1.5",
     "undici": "^7.13.0",
     "uuid": "^11.1.0",
