fix: 修复 ESLint 错误
- 修复 data-converter.ts 中的 hasOwnProperty 使用错误，使用 Object.prototype.hasOwnProperty.call 替代
- 修复 common-helpers.ts 中的 Function 类型错误，使用更具体的函数类型
- 移除 metaso/src/api.ts 中未使用的 ApiResponse 导入
- 修复 metaso/src/utils.ts 中未使用的 error 变量，添加下划线前缀

--- a/AI_coding_templates/samples/common/templates/api-integration/package.json
+++ b/AI_coding_templates/samples/common/templates/api-integration/package.json
@@ -4,7 +4,13 @@
   "type": "module",
   "version": "1.0.0",
   "description": "FastGPT API集成类插件模板",
-  "keywords": ["fastgpt", "plugin", "api", "integration", "template"],
+  "keywords": [
+    "fastgpt",
+    "plugin",
+    "api",
+    "integration",
+    "template"
+  ],
   "author": "FastGPT Team",
   "license": "Apache-2.0",
   "dependencies": {
