refactor: enhance tool API with improved error handling and S3 configuration updates (#148)
* fix:change url of doc (#136)

* feat: support system-toolset (#114) (#132)

* feat: support system-toolset (#114)

* feat: support system-toolset

* chore: remove pnpm-lock.yaml

* chore: update lock file

* chore: extract secretInputConfig out of inputs for tools

* chore: adjust

* chore: npm release v0.1.3

* feat: integrate Signoz for monitoring and logging tools (#140)

* feat: integrate Signoz for monitoring and logging tools

* refactor: restructure Signoz metrics handling into a class for improved initialization and recording

* fix bun.lock

* feat(tool): metaso (#143)

* feat: add metaso plugin (#138)

* feat: metaso toolset

* fix: vitest coverage

* 更新了KnowS插件，以及xiaoyibao插件/Clinicaltrials插件 (#123)

* feat(plugin): add xiaoyibao assistant tool

- Add xiaoyibao cancer patient assistant tool
- Provide professional medical consultation and personalized advice
- Support workflow global variables for flexible configuration

* chore: update dependencies and ignore local config

* Add xiaoyibao plugin files

* feat: 添加临床试验查询插件

- 实现临床试验查询功能，支持疾病、基因、药物等多维度搜索
- 修复KRAS查询API参数问题，使用query.cond格式
- 提供三层结构化输出：概述、统计、详情
- 支持中英文查询，智能参数解析
- 完善错误处理和超时机制
- 添加详细的使用说明和工作流配置示例
- 包含FastGPT插件配置方法和最佳实践

* chore: 更新.gitignore并删除辅助开发yml文件，添加测试文件

* docs: 添加本地开发和PR提交指导文档

* docs: 添加基于临床试验插件的完整开发指南

* docs: 优化FastGPT插件开发框架指南和专家提示词

- 更新AI_coding_guide.md为专门的FastGPT插件开发框架
- 重构developer_prompt.md为专业的插件开发专家助手
- 涵盖完整的开发工作流、代码规范和最佳实践
- 提供实用的工具函数和调试技巧

* docs: 完善FastGPT插件开发PRD模板，以临床试验插件为示例

* fix(knows): 修复summary工具answerType参数问题

- 修复summary工具配置，将answerType从多选改为单选
- 移除'全部'选项，只保留CLINICAL、RESEARCH、POPULAR_SCIENCE三种类型
- 修复shared/types.ts中AnswerRequest接口的answer_type字段类型
- 添加详细的调试日志，类似search工具的日志格式
- 增加兼容性处理，支持数组输入的向后兼容
- 修复history工具的API方法名错误(listQuestion -> listQuestions)
- 统一所有工具的错误处理和日志格式

主要修改文件:
- modules/tool/packages/knows/children/summary/config.ts
- modules/tool/packages/knows/children/summary/

--- a/.env.template
+++ b/.env.template
@@ -19,9 +19,14 @@ S3_PORT=9000
 S3_USE_SSL=false
 S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
+S3_PLIGIN_BUCKET=fastgpt-uploads
 S3_BUCKET=files
 
+# Signoz
+SIGNOZ_BASE_URL=
+SIGNOZ_SERVICE_NAME=fastgpt-plugin
+
 # MongoDB connection string
-# Replace 'myusername' and 'mypassword' with your actual MongoDB credentials
+# Replace 'myusername' and 'mypassword' with your actual MongoDB credentials and ensure the database 'fastgpt' exists.
 MONGODB_URI=mongodb://myusername:mypassword@localhost:27017/fastgpt?authSource=admin&directConnection=true
-MONGO_DATABASE_NAME=fastgpt
+MONGO_MAX_LINK=
