--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "prepare": "husky install",
-    "build": "tsc && bun ./scripts/build.ts",
+    "build": "tsc && bun ./scripts/build.ts --env inline",
     "build:no-tsc": "bun ./scripts/build.ts",
     "build:main": "bun build --env=disable --outfile=dist/index.js --target=node --minify ./src/index.ts",
     "build:worker": "bun build --env=disable --outfile=dist/worker.js --target=node --minify ./src/worker/worker.ts",
