--- a/.env.template
+++ b/.env.template
@@ -19,8 +19,8 @@ S3_PORT=9000
 S3_USE_SSL=false
 S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
-S3_PLIGIN_BUCKET=fastgpt-uploads
-S3_BUCKET=files
+S3_TOOL_BUCKET=files
+S3_PLUGIN_BUCKET=fastgpt-plugin
 
 # Signoz
 SIGNOZ_BASE_URL=
