chore: update .env.template

--- a/.env.template
+++ b/.env.template
@@ -29,4 +29,5 @@ SIGNOZ_SERVICE_NAME=fastgpt-plugin
 # MongoDB connection string
 # Replace 'myusername' and 'mypassword' with your actual MongoDB credentials and ensure the database 'fastgpt' exists.
 MONGODB_URI=mongodb://myusername:mypassword@localhost:27017/fastgpt?authSource=admin&directConnection=true
-MONGO_MAX_LINK=
+
+REDIS_URL=redis://default:mypassword@127.0.0.1:6379
