--- a/.env.template
+++ b/.env.template
@@ -7,16 +7,27 @@ LOG_LEVEL=info
 # Model provider sort
 MODEL_PROVIDER_PRIORITY=
 
-# MinIO Config
-# Customize MinIO Endpoint. Such as https://example.com The URL returned will be rewrite by this Endpoint: https://example.com/{{filename}}
-MINIO_CUSTOM_ENDPOINT=
-MINIO_ENDPOINT=localhost
-MINIO_PORT=9000
-MINIO_USE_SSL=false
-MINIO_ACCESS_KEY=minioadmin
-MINIO_SECRET_KEY=minioadmin
-MINIO_BUCKET=files
+# Signoz
+SIGNOZ_BASE_URL=
+SIGNOZ_SERVICE_NAME=fastgpt-plugin
+
+# S3 Config
+# Customize S3 Endpoint. Such as https://example.com The URL returned will be rewrite by this Endpoint: https://example.com/{{filename}}
+S3_CUSTOM_ENDPOINT=
+S3_ENDPOINT=localhost
+S3_PORT=9000
+S3_USE_SSL=false
+S3_ACCESS_KEY=minioadmin
+S3_SECRET_KEY=minioadmin
+S3_TOOL_BUCKET=files
+S3_PLUGIN_BUCKET=fastgpt-plugin
 
 # Signoz
 SIGNOZ_BASE_URL=
 SIGNOZ_SERVICE_NAME=fastgpt-plugin
+
+# MongoDB connection string
+# Replace 'myusername' and 'mypassword' with your actual MongoDB credentials and ensure the database 'fastgpt' exists.
+MONGODB_URI=mongodb://myusername:mypassword@localhost:27017/fastgpt?authSource=admin&directConnection=true
+
+REDIS_URL=redis://default:mypassword@127.0.0.1:6379
