--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "minio": "^8.0.5",
     "mongoose": "^8.16.4",
     "nanoid": "^5.1.5",
+    "node-cron": "^4.2.1",
     "undici": "^7.13.0",
     "uuid": "^11.1.0",
     "zod": "^3.24.3"
@@ -54,6 +55,7 @@
     "@types/babel__core": "^7.20.5",
     "@types/bun": "latest",
     "@types/express": "^5.0.1",
+    "@types/node-cron": "^3.0.11",
     "@vitest/coverage-v8": "3.1.2",
     "bun-plugin-dts": "^0.3.0",
     "eslint": "^9.24.0",
