--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "minio": "^8.0.5",
     "mongoose": "^8.16.4",
     "nanoid": "^5.1.5",
+    "node-cron": "^4.2.1",
     "undici": "^7.13.0",
     "uuid": "^11.1.0",
     "zod": "^3.24.3"
