--- a/.env.template
+++ b/.env.template
@@ -12,7 +12,7 @@ SIGNOZ_BASE_URL=
 SIGNOZ_SERVICE_NAME=fastgpt-plugin
 
 # S3 Config
-# Customize S3 Endpoint. Such as https://example.com The URL returned will be rewrite by this Endpoint: https://example.com/{{filename}}
+# Customize S3 Base URL, for example: https://s3.example.com, make sure you can access your files via https://s3.example.com/[bucket]/[objectname]
 S3_EXTERNAL_BASE_URL=
 S3_ENDPOINT=localhost
 S3_PORT=9000
@@ -20,7 +20,7 @@ S3_USE_SSL=false
 S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
 S3_UPLOAD_BUCKET=files # 系统工具，创建的临时文件，存储的桶，要求公开读私有写。
-S3_PLUGIN_BUCKET=fastgpt-plugin # 系统插件热安装文件都桶，私有读写。
+S3_PLUGIN_BUCKET=fastgpt-plugin # 系统插件热安装文件的桶，私有读写。
 
 # Signoz
 SIGNOZ_BASE_URL=
