--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "prepare": "husky install",
     "build": "tsc && bun ./scripts/build.ts",
     "build:main": "bun build --env=disable --outfile=dist/index.js --target=node --minify ./src/index.ts",
-    "build:worker": "bun build --env=disable --outfile=dist/worker.js --target=node --minify ./src/worker/worker.ts",
     "start": "NODE_ENV=production node --env-file-if-exists=.env.local dist/index.js",
-    "dev": "bun run ./scripts/dev.ts",
+    "dev:runtime": "bun --cwd projects/runtime dev",
     "test": "vitest run",
     "lint": "node_modules/.bin/eslint --fix",
     "prettier": "prettier --write \"./**/*.{ts,js,json}\"",
@@ -17,23 +16,10 @@
   },
   "dependencies": {
     "@inquirer/prompts": "^7.5.3",
-    "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/api-logs": "^0.203.0",
-    "@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.203.0",
-    "@opentelemetry/instrumentation-express": "^0.35.0",
-    "@opentelemetry/instrumentation-http": "^0.49.0",
-    "@opentelemetry/resources": "^2.0.1",
-    "@opentelemetry/sdk-logs": "^0.203.0",
-    "@opentelemetry/sdk-metrics": "^2.0.1",
     "@scalar/express-api-reference": "^0.8.7",
-    "@ts-rest/core": "^3.52.1",
-    "@ts-rest/express": "^3.52.1",
-    "@ts-rest/open-api": "^3.52.1",
     "@vercel/otel": "^1.13.0",
     "axios": "^1.12.2",
     "chalk": "^5.4.1",
-    "comlink": "^4.4.2",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "http-proxy-agent": "^7.0.2",
@@ -53,7 +39,7 @@
     "@eslint/js": "^9.24.0",
     "@eslint/json": "^0.11.0",
     "@types/babel__core": "^7.20.5",
-    "@types/bun": "^1.2.2",
+    "@types/bun": "^1.2.23",
     "@types/express": "^5.0.1",
     "@vitest/coverage-v8": "3.1.2",
     "bun-plugin-dts": "^0.3.0",
@@ -70,7 +56,9 @@
   },
   "workspaces": [
     "sdk",
-    "modules/tool/packages/*"
+    "lib",
+    "modules/tool/packages/*",
+    "projects/*"
   ],
   "packageManager": "bun@1.2.2",
   "lint-staged": {
