--- a/modules/tool/packages/feishuTable/package.json
+++ b/modules/tool/packages/feishuTable/package.json
@@ -9,11 +9,11 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "vitest": "^1.0.0"
+    "vitest": "3.1.2"
   }
 }
