--- a/modules/tool/packages/metaso/package.json
+++ b/modules/tool/packages/metaso/package.json
@@ -9,8 +9,8 @@
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "vitest": "^1.0.0"
+    "@types/node": "^20.10.0",
+    "vitest": "3.1.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
