--- a/modules/tool/packages/dbops/package.json
+++ b/modules/tool/packages/dbops/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@clickhouse/client": "^1.12.1",
+    "@types/mssql": "^9.1.8",
     "mssql": "^11.0.1",
     "mysql2": "^3.15.0",
     "oracledb": "^6.9.0",
