--- a/modules/tool/packages/searchApi/package.json
+++ b/modules/tool/packages/searchApi/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "zod": "^3.24.3"
+    "axios": "^1.12.2",
+    "zod": "^3.24.2"
   }
 }
