--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "type": "module",
   "scripts": {
     "prepare": "husky install",
-    "build": "tsc && bun ./scripts/build.ts",
     "build:main": "bun build --env=disable --outfile=dist/index.js --target=node --minify ./src/index.ts",
-    "start": "NODE_ENV=production node --env-file-if-exists=.env.local dist/index.js",
     "dev:runtime": "bun --cwd projects/runtime dev",
     "test": "vitest run",
     "lint": "node_modules/.bin/eslint --fix",
@@ -17,6 +15,8 @@
   "dependencies": {
     "@inquirer/prompts": "^7.5.3",
     "@scalar/express-api-reference": "^0.8.7",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__traverse": "^7.28.0",
     "@vercel/otel": "^1.13.0",
     "axios": "^1.12.2",
     "chalk": "^5.4.1",
@@ -35,7 +35,6 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.24.0",
     "@eslint/json": "^0.11.0",
     "@types/babel__core": "^7.20.5",
@@ -57,10 +56,10 @@
   "workspaces": [
     "sdk",
     "lib",
-    "modules/tool/packages/*",
+    "modules/*",
     "projects/*"
   ],
-  "packageManager": "bun@1.2.2",
+  "packageManager": "bun@1.3.0",
   "lint-staged": {
     "./**/**/*.{ts}": [
       "npm run lint",
