--- a/projects/runtime/package.json
+++ b/projects/runtime/package.json
@@ -4,7 +4,11 @@
   "type": "module",
   "scripts": {
     "dev": "bun run dev/index.ts",
-    "build:worker": "bun build --env=disable --outfile=dist/worker.js --target=node --minify ./lib/worker/worker.ts"
+    "build:worker": "bun build --env=disable --outfile=dist/worker.js --target=node --minify ../../lib/worker/worker.ts",
+    "build:main": "bun build --env=disable --outfile=dist/index.js --target=node --minify index.ts",
+    "build": "tsc && bun run build:worker && bun run build:main",
+    "build:no-tsc": "bun run build:worker && bun run build:main",
+    "start": "NODE_ENV=production node --env-file-if-exists=.env.local dist/index.js"
   },
   "devDependencies": {
     "@types/bun": "latest",
