--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "prepare": "husky install",
-    "build:main": "bun build --env=disable --outfile=dist/index.js --target=node --minify ./src/index.ts",
+    "build:runtime": "bun --cwd projects/runtime build",
     "dev:runtime": "bun --cwd projects/runtime dev",
     "test": "vitest run",
     "lint": "node_modules/.bin/eslint --fix",
@@ -57,7 +57,7 @@
     "sdk",
     "lib",
     "modules/*",
-    "projects/*"
+    "runtime"
   ],
   "packageManager": "bun@1.3.0",
   "lint-staged": {
