--- a/modules/tool/packages/feishuTable/package.json
+++ b/modules/tool/packages/feishuTable/package.json
@@ -4,16 +4,15 @@
   "description": "Feishu Bitable toolset for FastGPT",
   "main": "index.ts",
   "scripts": {
-    "test": "vitest",
-    "test:watch": "vitest --watch",
-    "test:coverage": "vitest --coverage"
+    "build": "bun ../../../../scripts/build.ts"
   },
   "dependencies": {
-    "axios": "^1.9.0",
     "zod": "^3.22.4"
   },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "vitest": "3.1.2"
+    "@types/bun": "latest"
   }
 }
