--- a/modules/tool/packages/redis/package.json
+++ b/modules/tool/packages/redis/package.json
@@ -4,11 +4,14 @@
   "description": "Redis cache toolset for FastGPT Plugin",
   "main": "index.ts",
   "scripts": {
-    "test": "vitest"
+    "build": "bun ../../../../scripts/build.ts"
   },
   "dependencies": {
     "ioredis": "^5.3.2",
     "zod": "^3.22.4"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/bun": "latest"
