--- a/modules/tool/packages/tavily/package.json
+++ b/modules/tool/packages/tavily/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "fastgpt-tools-fetchUrl",
+  "name": "fastgpt-tools-tavily",
   "module": "index.ts",
   "type": "module",
   "scripts": {
     "build": "bun ../../../../scripts/build.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "@types/turndown": "^5.0.5"
+    "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "cheerio": "^1.0.0",
-    "joplin-turndown-plugin-gfm": "^1.0.12",
-    "turndown": "^7.2.0",
     "zod": "^3.24.2"
   }
 }
