--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "prepare": "husky install",
-    "build": "NODE_OPTIONS='--max-old-space-size=8192' tsc && bun ./scripts/build.ts",
-    "build:no-tsc": "bun ./scripts/build.ts",
+    "build": "tsc && bun ./scripts/build.ts",
     "build:main": "bun build --env=disable --outfile=dist/index.js --target=node --minify ./src/index.ts",
     "build:worker": "bun build --env=disable --outfile=dist/worker.js --target=node --minify ./src/worker/worker.ts",
     "start": "NODE_ENV=production node --env-file-if-exists=.env.local dist/index.js",
