--- a/modules/tool/packages/metaso/package.json
+++ b/modules/tool/packages/metaso/package.json
@@ -6,12 +6,12 @@
     "build": "bun ../../../../scripts/build.ts"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0"
+    "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "zod": "^3.24.2"
+    "zod": "^3.24.3"
   }
 }
