--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ts-rest/express": "^3.52.1",
     "@ts-rest/open-api": "^3.52.1",
     "@vercel/otel": "^1.13.0",
+    "axios": "^1.12.2",
     "chalk": "^5.4.1",
     "comlink": "^4.4.2",
     "date-fns": "^4.1.0",
