--- a/modules/tool/package.json
+++ b/modules/tool/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@babel/generator": "^7.28.3",
     "@babel/parser": "^7.28.4",
-    "@babel/traverse": "^7.28.4"
+    "@babel/traverse": "^7.28.4",
+    "axios": "^1.12.2"
   }
 }
