--- a/modules/tool/packages/youtube/package.json
+++ b/modules/tool/packages/youtube/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fastgpt-tools-youtube",
+  "name": "@fastgpt-plugin/youtube",
   "module": "index.ts",
   "type": "module",
   "scripts": {
