--- a/modules/tool/packages/arxiv/package.json
+++ b/modules/tool/packages/arxiv/package.json
@@ -6,7 +6,7 @@
     "build": "bun ../../../../scripts/build.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest",
+    "@types/bun": "^1.2.2",
     "@types/node-fetch": "latest",
     "@types/xml2js": "latest"
   },
