--- a/modules/tool/packages/libulibu/package.json
+++ b/modules/tool/packages/libulibu/package.json
@@ -6,7 +6,7 @@
     "build": "bun build index.ts --minify --outdir dist --outFile index.js --target=node"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "^1.2.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
