--- a/modules/tool/packages/smtpEmail/package.json
+++ b/modules/tool/packages/smtpEmail/package.json
@@ -6,7 +6,7 @@
     "build": "bun ../../../../scripts/build.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest",
+    "@types/bun": "^1.2.2",
     "@types/nodemailer": "^6.4.17"
   },
   "peerDependencies": {
