--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,11 @@
       "@tool/*": ["./modules/tool/*"],
       "@model/*": ["./modules/model/*"],
       "@workflow/*": ["./modules/workflow/*"]
-    }
+    },
+
+    // Performance optimizations
+    "incremental": true,
+    "assumeChangesOnlyAffectDirectDependencies": true
   },
   "include": ["modules/**/*.ts", "scripts/**/*.ts", "sdk/**/*.ts", "src/**/*.ts", "test/**/*.ts"]
 }
