--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@eslint/js": "^9.24.0",
     "@eslint/json": "^0.11.0",
     "@types/babel__core": "^7.20.5",
-    "@types/bun": "^1.2.23",
+    "@types/bun": "latest",
     "@types/express": "^5.0.1",
     "@vitest/coverage-v8": "3.1.2",
     "bun-plugin-dts": "^0.3.0",
