--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prepare": "husky install",
     "build:runtime": "bun --cwd runtime build",
     "build:tools": "bun --cwd modules/tool build",
+    "build:marketplace": "bun run build:tools && bun --cwd runtime build:marketplace",
     "dev:runtime": "bun --cwd runtime dev",
     "test": "vitest run",
     "lint": "node_modules/.bin/eslint --fix",
@@ -14,33 +15,14 @@
     "new:tool": "bun ./scripts/newTool/index.ts",
     "start": "NODE_ENV=production node --env-file-if-exists=runtime/.env.local dist/index.js"
   },
-  "dependencies": {
+  "devDependencies": {
     "@inquirer/prompts": "^7.5.3",
-    "@scalar/express-api-reference": "^0.8.7",
-    "@types/babel__generator": "^7.27.0",
-    "@types/babel__traverse": "^7.28.0",
-    "@vercel/otel": "^1.13.0",
-    "axios": "^1.12.2",
     "chalk": "^5.4.1",
     "date-fns": "^4.1.0",
-    "express": "^5.1.0",
-    "http-proxy-agent": "^7.0.2",
-    "https-proxy-agent": "^7.0.6",
-    "ioredis": "^5.7.0",
     "json5": "^2.2.3",
-    "minio": "^8.0.5",
-    "nanoid": "^5.1.5",
-    "node-cron": "^4.2.1",
-    "undici": "^7.13.0",
-    "uuid": "^11.1.0",
-    "zod": "^3.24.3"
-  },
-  "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@eslint/json": "^0.11.0",
-    "@types/babel__core": "^7.20.5",
     "@types/bun": "latest",
-    "@types/express": "^5.0.1",
     "@vitest/coverage-v8": "3.1.2",
     "bun-plugin-dts": "^0.3.0",
     "eslint": "^9.24.0",
