--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,13 @@
     "incremental": true,
     "assumeChangesOnlyAffectDirectDependencies": true
   },
-  "include": ["modules/**/*.ts", "scripts/**/*.ts", "sdk/**/*.ts", "src/**/*.ts", "test/**/*.ts"],
+  "include": [
+    "modules/**/*.ts",
+    "scripts/**/*.ts",
+    "sdk/**/*.ts",
+    "src/**/*.ts",
+    "test/**/*.ts",
+    "lib/**/*.ts"
+  ],
   "exclude": ["sdk/dist/**/*.ts"]
 }
