update zod version

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "vitest": "3.1.2"
   },
   "peerDependencies": {
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "zod": "^4.1.12"
   },
   "workspaces": [
     "sdk",
