--- a/package.json
+++ b/package.json
@@ -53,5 +53,10 @@
       "npm run prettier",
       "git add ."
     ]
+  },
+  "dependencies": {
+    "@ts-rest/core": "3.53.0-rc.1",
+    "@ts-rest/express": "3.53.0-rc.1",
+    "@ts-rest/open-api": "3.53.0-rc.1"
   }
 }
